Improving CONTRIBUTING.md, README.md. Cleaning of notebooks. Starting a pipeline template. New issue template for pipeline reproduction.

--- a/src/reproduction_2T6S.ipynb
+++ b/src/reproduction_2T6S.ipynb
@@ -75,7 +75,7 @@
     "exp_dir = '/data/ds001734-download'\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = \"/home/analytic_variability_fmri/data/derived/reproduced\"\n",
+    "result_dir = \"/home/narps_open_pipelines/data/derived/reproduced\"\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
@@ -115,11 +115,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"062\", \"040\", \"084\", \"056\", \"064\", \"044\", \"060\", \"112\", \"050\", \"082\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\", \"017\", \"083\", \"107\", \"119\", \"103\", \"057\", \"061\", \"085\", \"027\", \"059\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"062\", \"040\", \"084\", \"056\", \"064\", \"044\", \"060\", \"112\", \"050\", \"082\", \"022\", \"052\", \"030\", \"100\", \"108\", \"096\", \"058\", \"024\", \"080\", \"006\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\", \"017\", \"083\", \"107\", \"119\", \"103\", \"057\", \"061\", \"085\", \"027\", \"059\", \"019\", \"047\", \"039\", \"029\", \"067\", \"009\", \"055\", \"015\", \"077\", \"003\"]\n",
-    "\n",
     "n_sub = len(subject_list)\n",
     "# Run to use for this analysis\n",
     "run_list = ['01', '02', '03', '04']\n",
@@ -138,7 +133,7 @@
    "id": "adapted-coral",
    "metadata": {},
    "source": [
-    "### 1st level analysis (Subject level)"
+    "## Subject level analysis"
    ]
   },
   {
@@ -148,23 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#l1_analysis = pipelines_2T6S.get_l1_analysis(subject_list, TR, fwhm, run_list, exp_dir, \n",
-    "#                                             result_dir, working_dir, output_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "curious-edwards",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create analysis output graph\n",
-    "#l1_analysis.write_graph(graph2use='colored', format='png', simple_form=True)\n",
-    "\n",
-    "# Visualize the graph\n",
-    "#from IPython.display import Image\n",
-    "#Image(filename=opj(l1_analysis.base_dir, 'l1_analysis', 'graph.png'))"
+    "l1_analysis = pipelines_2T6S.get_l1_analysis(subject_list, TR, fwhm, run_list, exp_dir, \n",
+    "                                             result_dir, working_dir, output_dir)"
    ]
   },
   {
@@ -176,7 +156,7 @@
    },
    "outputs": [],
    "source": [
-    "#l1_analysis.run('MultiProc', plugin_args={'n_procs': 2})"
+    "l1_analysis.run('MultiProc', plugin_args={'n_procs': 2})"
    ]
   },
   {
@@ -184,7 +164,7 @@
    "id": "floppy-disposal",
    "metadata": {},
    "source": [
-    "## 2nd LEVEL ANALYSIS "
+    "## Group level analysis"
    ]
   },
   {
@@ -205,14 +185,7 @@
    "outputs": [],
    "source": [
     "l2_analysis_equal_indiff = pipelines_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalIndifference\", \n",
-    "                                                          exp_dir, result_dir, working_dir, output_dir)\n",
-    "\n",
-    "# Create analysis output graph\n",
-    "#l2_analysis_equal_indiff.write_graph(graph2use='colored', format='png', simple_form=True)\n",
-    "\n",
-    "# Visualize the graph\n",
-    "#from IPython.display import Image\n",
-    "#Image(filename=opj(l2_analysis_equal_indiff.base_dir, 'l2_analysis', 'graph.png'))"
+    "                                                          exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
   {
@@ -390,14 +363,7 @@
    "outputs": [],
    "source": [
     "l2_analysis_equal_range = pipelines_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalRange\", \n",
-    "                                                          exp_dir, result_dir, working_dir, output_dir)\n",
-    "\n",
-    "# Create analysis output graph\n",
-    "#l2_analysis_equal_range.write_graph(graph2use='colored', format='png', simple_form=True)\n",
-    "\n",
-    "# Visualize the graph\n",
-    "#from IPython.display import Image\n",
-    "#Image(filename=opj(l2_analysis_equal_range.base_dir, 'l2_analysis', 'graph.png'))"
+    "                                                          exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
   {
@@ -589,14 +555,7 @@
    "outputs": [],
    "source": [
     "l2_analysis_groupcomp = pipelines_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"groupComp\", \n",
-    "                                                          exp_dir, result_dir, working_dir, output_dir)\n",
-    "\n",
-    "# Create analysis output graph\n",
-    "#l2_analysis_groupcomp.write_graph(graph2use='colored', format='png', simple_form=True)\n",
-    "\n",
-    "# Visualize the graph\n",
-    "#from IPython.display import Image\n",
-    "#Image(filename=opj(l2_analysis_groupcomp.base_dir, 'l2_analysis', 'graph.png'))"
+    "                                                          exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
   {
@@ -757,14 +716,6 @@
    "source": [
     "pipelines_2T6S.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71d19d95",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
