--- a/src/reproduction_4TQ6.ipynb
+++ b/src/reproduction_4TQ6.ipynb
@@ -5,9 +5,9 @@
    "id": "killing-average",
    "metadata": {},
    "source": [
-    "# FMRI DATA ANALYSIS - NARPS DATASET TEAM J7F9\n",
+    "# FMRI DATA ANALYSIS - NARPS DATASET TEAM 4TQ6\n",
     "\n",
-    "This notebook reproduce the analysis made by team **J7F9** for the NARPS experiment (Botvinik-Nezer & al, 2020). \n",
+    "This notebook reproduce the analysis made by team **4TQ6** for the NARPS experiment (Botvinik-Nezer & al, 2020). \n",
     "\n",
     "**To use this notebook :** \n",
     "- Download fMRIprep datas available [**here**](https://openneuro.org/datasets/ds001734/versions/1.0.4) or in [**datalad**](http://datasets.datalad.org/?dir=/workshops/nih-2017/ds001734).\n",
@@ -30,7 +30,7 @@
     "from os.path import join as opj\n",
     "import os\n",
     "import json\n",
-    "from lib import pipelines_J7F9"
+    "from lib import pipelines_4TQ6_wip"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_ID = \"J7F9\"\n",
+    "team_ID = \"4TQ6\"\n",
     "\n",
     "# Important directories\n",
     "## exp_dir : where the data are stored (where the ds001734 directory is stored)\n",
@@ -62,7 +62,7 @@
    "id": "cathedral-commonwealth",
    "metadata": {},
    "source": [
-    "## Subject level analysis"
+    "## Single subject - Single run analysis"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "subject_list = []\n",
     "for dirs in dir_list:\n",
     "    if dirs[0:3] == 'sub':\n",
-    "        subject_list.append(dirs[-3:])\n"
+    "        subject_list.append(dirs[-3:])"
    ]
   },
   {
@@ -104,22 +104,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71a515c2",
+   "id": "77472e4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1.analysis = pipelines_J7F9.get_l1_analysis(subject_list, TR, fwhm, run_list, exp_dir, result_dir, \n",
-    "                                             working_dir, output_dir)"
+    "#subject_list = ['001']\n",
+    "run_list = ['01', '02', '03', '04']\n",
+    "#TR\n",
+    "with open(opj(exp_dir, 'task-MGT_bold.json'), 'rt') as fp:\n",
+    "    task_info = json.load(fp)\n",
+    "TR = task_info['RepetitionTime']\n",
+    "\n",
+    "#FWHM to smooth\n",
+    "fwhm = 4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc4d4b97",
+   "id": "3b654109",
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis.run()"
+    "l1_analysis= pipelines_4TQ6_wip.get_l1_analysis(subject_list, run_list, \n",
+    "                                            TR, fwhm, exp_dir, output_dir, \n",
+    "                                            working_dir, result_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f84f0e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "l1_analysis.run('MultiProc', plugin_args={'n_procs': 4})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cbe5d76",
+   "metadata": {},
+   "source": [
+    "## Single subject - Between run analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9522af1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contrast_list = ['1', '2']\n",
+    "l2_analysis = pipelines_4TQ6_wip.get_l2_analysis(subject_list, contrast_list, run_list, exp_dir, \n",
+    "                                             output_dir, working_dir, result_dir, data_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a772b047",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "l2_analysis.run('MultiProc', plugin_args={'n_procs': 4})"
    ]
   },
   {
@@ -127,7 +180,7 @@
    "id": "macro-progress",
    "metadata": {},
    "source": [
-    "## Group level analysis"
+    "## Third level analysis - Group level "
    ]
   },
   {
@@ -137,14 +190,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equalRange = pipelines_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'equalRange', exp_dir, \n",
-    "                                                        result_dir, working_dir, output_dir, data_dir)\n",
+    "l3_analysis_equalRange = pipelines_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, 'equalRange', exp_dir, output_dir, \n",
+    "                       working_dir, result_dir, data_dir)\n",
     "\n",
-    "l2_analysis_equalIndiff = pipelines_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'equalIndifference', \n",
-    "                                                         exp_dir, result_dir, working_dir, output_dir, data_dir)\n",
+    "l3_analysis_equalIndiff = pipelines_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, 'equalIndifference', \n",
+    "                       exp_dir, output_dir, \n",
+    "                       working_dir, result_dir, data_dir)\n",
     "\n",
-    "l2_analysis_groupComp = pipelines_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'groupComp', exp_dir, \n",
-    "                                                        result_dir, working_dir, output_dir, data_dir)"
+    "l3_analysis_groupComp = pipelines_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, \"groupComp\", exp_dir, \n",
+    "                                                         output_dir, working_dir, result_dir, data_dir)"
    ]
   },
   {
@@ -154,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equalRange.run()"
+    "l3_analysis_equalRange.run()"
    ]
   },
   {
@@ -164,17 +218,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equalIndiff.run()"
+    "l3_analysis_equalIndiff.run()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2fb1405b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "l2_analysis_groupComp.run()"
+    "l3_analysis_groupComp.run('MultiProc', plugin_args={'n_procs': 4})"
    ]
   },
   {
@@ -184,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipelines_J7F9.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "pipelines_4TQ6_wip.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   }
  ],
