--- a/src/reproduction_98BT.ipynb
+++ b/src/reproduction_98BT.ipynb
@@ -54,7 +54,7 @@
     "exp_dir = '/data/ds001734-download'\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = \"/home/analytic_variability_fmri/data/derived/reproduced\"\n",
+    "result_dir = \"/home/narps_open_pipelines/data/derived/reproduced\"\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
@@ -86,9 +86,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Subject list (to which we will do the analysis)\n",
-    "#subject_list = sorted(subject_list)[0:20]\n",
-    "\n",
     "# Run to use for this analysis\n",
     "run_list = ['01', '02', '03', '04']\n",
     "\n",
@@ -107,6 +104,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a052ed4",
+   "metadata": {},
+   "source": [
+    "## Dartel workflow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ce19362d",
@@ -116,6 +121,14 @@
     "dartel_wf = pipelines_98BT.get_dartel_template_wf(exp_dir, result_dir, working_dir, output_dir, subject_list)\n",
     "\n",
     "dartel_wf.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728760e7",
+   "metadata": {},
+   "source": [
+    "## Preprocessing "
    ]
   },
   {
@@ -132,6 +145,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b93974d",
+   "metadata": {},
+   "source": [
+    "## Subject level analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "32763038",
@@ -142,6 +163,14 @@
     "                                             working_dir, output_dir)\n",
     "\n",
     "l1_analysis.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ddb9214",
+   "metadata": {},
+   "source": [
+    "## Group level analysis"
    ]
   },
   {
