--- a/src/reproduction_C88N.ipynb
+++ b/src/reproduction_C88N.ipynb
@@ -66,7 +66,7 @@
     "exp_dir = '/data/ds001734-download'\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = \"/home/analytic_variability_fmri/data/derived/reproduced\"\n",
+    "result_dir = \"/home/narps_open_pipelines/data/derived/reproduced\"\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
@@ -91,11 +91,6 @@
     "    if dirs[0:3] == 'sub':\n",
     "        subject_list.append(dirs[-3:])\n",
     "\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"062\", \"040\", \"084\", \"056\", \"064\", \"044\", \"060\", \"112\", \"050\", \"082\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\", \"017\", \"083\", \"107\", \"119\", \"103\", \"057\", \"061\", \"085\", \"027\", \"059\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"062\", \"040\", \"084\", \"056\", \"064\", \"044\", \"060\", \"112\", \"050\", \"082\", \"022\", \"052\", \"030\", \"100\", \"108\", \"096\", \"058\", \"024\", \"080\", \"006\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\", \"017\", \"083\", \"107\", \"119\", \"103\", \"057\", \"061\", \"085\", \"027\", \"059\", \"019\", \"047\", \"039\", \"029\", \"067\", \"009\", \"055\", \"015\", \"077\", \"003\"]\n",
-    "       \n",
     "n_sub = len(subject_list)\n",
     "\n",
     "# Run to use for this analysis\n",
@@ -115,7 +110,7 @@
    "id": "micro-kuwait",
    "metadata": {},
    "source": [
-    "### 1st level analysis (Subject level)"
+    "## Subject level analysis"
    ]
   },
   {
@@ -146,7 +141,7 @@
    "id": "prostate-maldives",
    "metadata": {},
    "source": [
-    "## 2nd LEVEL ANALYSIS "
+    "## Group level analysis"
    ]
   },
   {
