--- a/src/reproduction_Q6O0.ipynb
+++ b/src/reproduction_Q6O0.ipynb
@@ -61,7 +61,7 @@
     "exp_dir = '/data/ds001734-download'\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = \"/home/analytic_variability_fmri/data/derived/reproduced\"\n",
+    "result_dir = \"/home/narps_open_pipelines/data/derived/reproduced\"\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
@@ -88,11 +88,6 @@
     "# Run to use for this analysis\n",
     "run_list = ['01', '02', '03', '04']\n",
     "\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"062\", \"040\", \"084\", \"056\", \"064\", \"044\", \"060\", \"112\", \"050\", \"082\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\", \"017\", \"083\", \"107\", \"119\", \"103\", \"057\", \"061\", \"085\", \"027\", \"059\"]\n",
-    "#subject_list = [\"020\", \"070\", \"120\", \"118\", \"002\", \"018\", \"046\", \"066\", \"098\", \"116\", \"008\", \"106\", \"004\", \"104\", \"092\", \"090\", \"016\", \"124\", \"088\", \"094\", \"062\", \"040\", \"084\", \"056\", \"064\", \"044\", \"060\", \"112\", \"050\", \"082\", \"022\", \"052\", \"030\", \"100\", \"108\", \"096\", \"058\", \"024\", \"080\", \"006\", \"001\", \"013\", \"109\", \"035\", \"025\", \"053\", \"073\", \"121\", \"011\", \"087\", \"069\", \"095\", \"113\", \"115\", \"089\", \"045\", \"117\", \"093\", \"021\", \"041\", \"017\", \"083\", \"107\", \"119\", \"103\", \"057\", \"061\", \"085\", \"027\", \"059\", \"019\", \"047\", \"039\", \"029\", \"067\", \"009\", \"055\", \"015\", \"077\", \"003\"]\n",
-    "       \n",
     "n_sub = len(subject_list)\n",
     "\n",
     "#TR\n",
@@ -105,29 +100,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "861e6521",
+   "metadata": {},
+   "source": [
+    "## Subject level analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "36ab8b79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#l1_analysis = pipelines_Q6O0.get_l1_analysis(subject_list, TR, fwhm, run_list, \n",
-    "#                                             exp_dir, result_dir, working_dir, output_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6a22529",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create analysis output graph\n",
-    "#l1_analysis.write_graph(graph2use='colored', format='png', simple_form=True)\n",
-    "\n",
-    "# Visualize the graph\n",
-    "#from IPython.display import Image\n",
-    "#Image(filename=opj(l1_analysis.base_dir, 'l1_analysis', 'graph.png'))"
+    "l1_analysis = pipelines_Q6O0.get_l1_analysis(subject_list, TR, fwhm, run_list, \n",
+    "                                             exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
   {
@@ -139,7 +127,15 @@
    },
    "outputs": [],
    "source": [
-    "#l1_analysis.run('MultiProc', plugin_args={'n_procs': 2})"
+    "l1_analysis.run('MultiProc', plugin_args={'n_procs': 2})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c5ea477",
+   "metadata": {},
+   "source": [
+    "## Group level analysis"
    ]
   },
   {
@@ -154,21 +150,6 @@
     "\n",
     "l2_analysis = pipelines_Q6O0.get_l2_analysis(subject_list, n_sub, model_list, method, \n",
     "                                             exp_dir, result_dir, working_dir, output_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "947df47f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create analysis output graph\n",
-    "#l2_analysis.write_graph(graph2use='exec', format='png', simple_form=True)\n",
-    "\n",
-    "# Visualize the graph\n",
-    "#from IPython.display import Image\n",
-    "#Image(filename=opj(l2_analysis.base_dir, 'l2_analysis', 'graph_detailed.png'))"
    ]
   },
   {
@@ -240,14 +221,6 @@
    "source": [
     "pipelines_Q6O0.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "139158ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
