--- a/src/reproduction_T54A.ipynb
+++ b/src/reproduction_T54A.ipynb
@@ -47,8 +47,8 @@
     "exp_dir = '/data/NARPS/ds001734-download'\n",
     "\n",
     "## result_dir : where results are stored \n",
-    "result_dir = '/local/egermani/analytic_variability_fmri/data/derived/reproduced'\n",
-    "data_dir = '/local/egermani/analytic_variability_fmri/data/derived/original'\n",
+    "result_dir = '/local/egermani/narps_open_pipelines/data/derived/reproduced'\n",
+    "data_dir = '/local/egermani/narps_open_pipelines/data/derived/original'\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
@@ -80,14 +80,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject_list = [\"001\", \"002\", \"003\", \"006\", \"008\", \"009\", \"010\", \"011\",  \"014\", \"015\",  \"017\", \"019\", \"020\",\n",
-    "                \"021\", \"022\", \"024\", \"025\", \"026\", \"027\", \"029\", \"032\", \"033\", \"035\", \"036\", \"037\", \"038\", \n",
-    "                \"039\", \"040\", \"041\", \"043\", \"044\", \"045\", \"046\", \"047\", \"049\", \"050\", \"051\", \"052\", \"053\", \n",
-    "                \"054\", \"055\", \"056\", \"057\", \"058\", \"059\", \"060\", \"061\", \"062\", \"063\", \"064\", \"066\", \"067\", \n",
-    "                 \"069\", \"070\", \"071\", \"072\", \"074\", \"075\", \"076\", \"077\", \"079\", \"080\", \"081\", \n",
-    "                \"082\", \"083\", \"084\", \"085\", \"087\", \"089\", \"090\", \"092\", \"093\", \"094\", \"095\", \"096\", \n",
-    "                \"098\", \"102\", \"103\", \"104\", \"105\", \"106\", \"107\", \"108\", \"109\", \"110\", \"112\", \n",
-    "                \"113\", \"114\", \"115\", \"117\", \"118\", \"119\", \"120\", \"121\", \"123\", \"124\"]"
+    "# Subject list (to which we will do the analysis)\n",
+    "dir_list = os.listdir(exp_dir)\n",
+    "\n",
+    "# Subject list (to which we will do the analysis)\n",
+    "subject_list = []\n",
+    "for dirs in dir_list:\n",
+    "    if dirs[0:3] == 'sub':\n",
+    "        subject_list.append(dirs[-3:])"
    ]
   },
   {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b654109",
+   "id": "77472e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,16 @@
     "TR = task_info['RepetitionTime']\n",
     "\n",
     "#FWHM to smooth\n",
-    "fwhm = 4\n",
+    "fwhm = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b654109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "l1_analysis= pipelines_T54A.get_l1_analysis(subject_list, run_list, \n",
     "                                            TR, fwhm, exp_dir, output_dir, \n",
     "                                            working_dir, result_dir)"
@@ -132,6 +141,14 @@
    "outputs": [],
    "source": [
     "l1_analysis.run('MultiProc', plugin_args={'n_procs': 4})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cbe5d76",
+   "metadata": {},
+   "source": [
+    "## Single subject - Between run analysis"
    ]
   },
   {
