--- a/src/reproduction_V55J.ipynb
+++ b/src/reproduction_V55J.ipynb
@@ -68,7 +68,7 @@
     "exp_dir = '/data/ds001734-download'\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = \"/home/analytic_variability_fmri/data/derived/reproduced\"\n",
+    "result_dir = \"/home/narps_open_pipelines/data/derived/reproduced\"\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
@@ -121,14 +121,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45788b92",
+   "id": "7063c287",
    "metadata": {},
    "outputs": [],
    "source": [
     "#FWHM to smooth (team chose a kernel of 6mm for smoothing)\n",
     "fwhm = 6\n",
     "\n",
-    "contrast_list = ['01', '02']\n",
+    "contrast_list = ['01', '02']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45788b92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "l2_analysis_equal_indiff = pipelines_V55J.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalIndifference\", exp_dir, result_dir, working_dir, output_dir)\n",
     "\n",
     "l2_analysis_equal_indiff.run('MultiProc', plugin_args={'n_procs': 16})"
@@ -172,14 +181,6 @@
    "source": [
     "pipelines_V55J.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71d19d95",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
