Update paths in notebooks: add relative paths so that if people setup the docker correctly, paths do not have to be modified

--- a/src/reproduction_C88N.ipynb
+++ b/src/reproduction_C88N.ipynb
@@ -63,10 +63,10 @@
     "team_ID = \"C88N\"\n",
     "# Important directories\n",
     "## exp_dir : where the data are stored\n",
-    "exp_dir = '/data/ds001734-download'\n",
+    "exp_dir = '../data/original'\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = \"/home/narps_open_pipelines/data/derived/reproduced\"\n",
+    "result_dir = \"../data/derived/reproduced\"\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
