--- a/src/reproduction_J7F9.ipynb
+++ b/src/reproduction_J7F9.ipynb
@@ -44,11 +44,11 @@
     "\n",
     "# Important directories\n",
     "## exp_dir : where the data are stored (where the ds001734 directory is stored)\n",
-    "exp_dir = '/data/NARPS/ds001734-download'\n",
+    "exp_dir = '../data/original'\n",
     "\n",
-    "## result_dir : where results are stored \n",
-    "result_dir = '/local/egermani/narps_open_pipelines/data/derived/reproduced'\n",
-    "data_dir = '/local/egermani/narps_open_pipelines/data/derived/original'\n",
+    "## result_dir : where the intermediate and final results will be store\n",
+    "result_dir = \"../data/derived/reproduced\"\n",
+    "data_dir = '../data/derived/original'\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
