--- a/src/reproduction_X19V.ipynb
+++ b/src/reproduction_X19V.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "adea61d4",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "excited-relief",
    "metadata": {},
    "outputs": [],
@@ -44,10 +44,10 @@
     "\n",
     "# Important directories\n",
     "## exp_dir : where the data are stored (where the ds001734 directory is stored)\n",
-    "exp_dir = '/data/NARPS/ds001734-download'\n",
+    "exp_dir = '../data/original'\n",
     "\n",
-    "## result_dir : where results are stored \n",
-    "result_dir = '/local/egermani/narps_open_pipelines/data/derived/reproduced'\n",
+    "## result_dir : where the intermediate and final results will be store\n",
+    "result_dir = \"../data/derived/reproduced\"\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
@@ -55,7 +55,7 @@
     "## output_dir : where the final results will be store\n",
     "output_dir = f\"NARPS-{team_ID}-reproduced\"\n",
     "\n",
-    "data_dir = '/local/egermani/narps_open_pipelines/data/derived/original'"
+    "data_dir = '/home/narps_open_pipelines/data/derived/original'"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
