--- a/src/reproduction_V55J.ipynb
+++ b/src/reproduction_V55J.ipynb
@@ -65,10 +65,10 @@
     "team_ID = \"V55J\"\n",
     "# Important directories\n",
     "## exp_dir : where the data are stored (where the ds001734 directory is stored)\n",
-    "exp_dir = '/data/ds001734-download'\n",
+    "exp_dir = '../data/original'\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = \"/home/narps_open_pipelines/data/derived/reproduced\"\n",
+    "result_dir = \"../data/derived/reproduced\"\n",
     "\n",
     "## working_dir : where the intermediate outputs will be store\n",
     "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
