[REFAC] allowing the project to be installed as a python package

--- a/examples/notebooks/reproduction_2T6S.ipynb
+++ b/examples/notebooks/reproduction_2T6S.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "digital-intention",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib import pipelines_2T6S\n",
+    "from narps_open.pipelines import team_2T6S\n",
     "\n",
     "from os.path import join as opj\n",
     "import os\n",
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis = pipelines_2T6S.get_l1_analysis(subject_list, TR, fwhm, run_list, exp_dir, \n",
+    "l1_analysis = team_2T6S.get_l1_analysis(subject_list, TR, fwhm, run_list, exp_dir, \n",
     "                                             result_dir, working_dir, output_dir)"
    ]
   },
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equal_indiff = pipelines_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalIndifference\", \n",
+    "l2_analysis_equal_indiff = team_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalIndifference\", \n",
     "                                                          exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equal_range = pipelines_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalRange\", \n",
+    "l2_analysis_equal_range = team_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalRange\", \n",
     "                                                          exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_groupcomp = pipelines_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"groupComp\", \n",
+    "l2_analysis_groupcomp = team_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"groupComp\", \n",
     "                                                          exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
